# ipyvega

./: .editorconfig  .gitignore  .gitmodules  .npmignore  .travis.yml  Example.ipynb  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  Vega-Lite.ipynb  Vega.ipynb  index.html  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json  vega.json  vega3.json  vendor.sh  webpack.config.js
.github/: dependabot.yml
.github/workflows/: merge-dependabot.yml  test.yml  ui.yml
binder/: environment.yml  postBuild  pyproject.toml
data/: cars.json
notebooks/: AllCompressions.ipynb  AllSupportedTypes.ipynb  Altair.ipynb  AltairStreaming.ipynb  DatasetsWidget.ipynb  TimeAllTypes.ipynb  TimeHeatmap.ipynb  TimeNumCategorical.ipynb  Vega-Lite.ipynb  Vega-SVG.ipynb  Vega.ipynb  VegaHeatmap.ipynb  VegaLarge.ipynb  VegaLite.ipynb  VegaProgressivis.ipynb  Widget.ipynb  flight.csv
src/: compression.ts  embed.css  extension.js  extension.ts  index.js  index.ts  labplugin.ts  serializers.ts  types.d.ts  vega.js  version.ts  widget.ts
static/: embed.css  embed.js  index.html  main.css  polestar.html  vega-lite.html  vegalite.html  voyager.html
static/vegalite/scripts/: app.js  vendor.js
static/vegalite/styles/: custom.css
ui-tests/: package.json  playwright.config.js
ui-tests/tests/: vega.test.ts
ui-tests/tests/notebooks/: NBTest.ipynb  vega.ipynb
vega/: __init__.py  _frontend.py  altair.py  base.py  disable_autoscroll.py  polestar.py  tool.py  utils.py  vega.py  vegalite.py  voyager.py  widget.py
vega/dataframes/: __init__.py  compressors.py  numpy_adapter.py  pandas_adapter.py  progressivis_adapter.py  serializers.py  source_adapter.py  traitlets.py
vega/ipydatatablewidget/: __init__.py  pandas_adapter.py  source_adapter.py
vega/static/: embed.js  extension.js  extension.js.map  index.js  index.js.LICENSE.txt  index.js.map  labplugin.js  labplugin.js.LICENSE.txt  vega-lite.html  vega-lite.js  vega.html  vega.js  widget.js  widget.js.LICENSE.txt  widget.js.map
vega/tests/: test_entrypoint.py  test_outputs.py  test_utils.py
vega3/: __init__.py  base.py  utils.py  vega.py  vegalite.py
vega3/static/: index.d.ts  index.js  index.js.map  vega.html  vega.js
vega3/tests/: test_utils.py
widgets/: README.md  embed_minimal.py  index.html
