[tool.poetry]
name = "vega"
version = "3.0.2"
license = "BSD 3-clause"
description = "A Jupyter widget for Vega 5 and Vega-Lite 4"
authors = ["Dominik Moritz <domoritz@gmail.com>"]
packages = [
    { include = "vega" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]
homepage = "https://github.com/vega/ipyvega"
repository = "https://github.com/vega/ipyvega"
exclude = ["notebooks/*"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">= 3.6"
jupyter = "^1.0.0"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.extras]
widget = [
    "ipywidgets"
]

[tool.poetry.scripts]
test = "pytest:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
