[tool.poetry]
name = "vega"
version = "4.1.0"
license = "BSD 3-clause"
description = "A Jupyter widget for Vega 5 and Vega-Lite 4"
authors = ["Dominik Moritz <domoritz@gmail.com>"]
packages = [
    { include = "vega" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
homepage = "https://github.com/vega/ipyvega"
repository = "https://github.com/vega/ipyvega"
exclude = ["notebooks/*"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">= 3.8.0"
jupyter = "^1.0.0"
pandas = ">= 1.5.0"
ipytablewidgets = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
altair = "^4.0.1"

[tool.poetry.extras]
widget = [
    "ipywidgets"
]
jupyterlab = [
    "jupyterlab"
]

[tool.poetry.plugins."altair.vegalite.v4.renderer"]
notebook = "vega.vegalite:entry_point_renderer"

[tool.poetry.plugins."altair.vega.v5.renderer"]
notebook = "vega.vega:entry_point_renderer"

[build-system]
requires = ["poetry-core>=1.5.2"]
build-backend = "poetry.core.masonry.api"
